[tool.poetry]
name = "ecf-dedup"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mypy = "^0.971"
pandas = "^1.4.3"
geopandas = "^0.11.1"
Rtree = "^1.0.0"
requests = "^2.28.1"
googleapiutils2 = {git = "git@github.com:mkbabb/googleapiutils2.git"}
Jinja2 = "^3.1.2"
openpyxl = "^3.0.10"


[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
